[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "complexoperations_iperoyg"
version = "0.0.8"
authors = [
  { name="Arthur Iperoyg", email="iperoyg@gmail.com" },
]
description = "Complex Operations Package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/iperoyg/devops-experiments"
"Bug Tracker" = "https://github.com/iperoyg/devops-experiments/issues"